# quasar_template

backend/: pyproject.toml
frontend/quasar_app/: .eslintrc.cjs  README.md  babel.config.cjs  package-lock.json  package.json  quasar.config.js
frontend/quasar_app/src/components/layout/: Sidebar.vue  SidebarItem.vue
frontend/quasar_app/src/css/: quasar.variables.scss
frontend/quasar_app/src/layouts/: MainLayout.vue
frontend/quasar_app/src/pages/: IndexPage.vue
frontend/quasar_app/src/router/: routes.js
frontend/quasar_app/utils/: request.js  urls.js
